    - Removed preview label from naming section (cleaner interface)
    - Enhanced settings warning: explicit "60 platforms/second at value 1" warning with newline
    - Updated mod descriptions (info.json, README) to include naming pattern variables
    - Drastically simplified README from 197 to 44 lines (essential info only)
  Bugfixes (2.0.3.5):
    - CRITICAL: Fixed platform creation only working when viewing target planet surface
    - Platform creation now works from any view: Remote View, space, any planet surface
    - Changed has_starter_pack_available() to check logistics on target planet (not player's current location)
    - Uses force.logistic_networks[surface_name] (API returns dictionary grouped by surface) instead of position-based search
    - Proper API usage: force.logistic_networks is dictionary[string → array[LuaLogisticNetwork]] keyed by surface name
    - Made SPA SUCCESS messages conditional on debug_logging flag (built entities, platform activated)
    - Complete console silence during normal operation - all messages now behind debug flag
---------------------------------------------------------------------------------------------------
Version: 2.0.3 (previous releases)
Date: 2025
  Major Changes:
    - Simplified to copy-only design (removed blueprint system entirely)
    - Quality now automatically inferred from source platform
    - Starter pack type inferred from source platform
  Improvements:
    - Fixed localization keys (removed custom section headers)
    - Fixed panel reset issue when selecting platforms
    - Much simpler GUI with only essential controls
    - Reduced code size by ~200 lines
    - Auto-activation: Platforms automatically unpause when construction completes
  GUI Changes:
    - Removed blueprint selector
    - Removed starter pack dropdown
    - Removed quality dropdown
    - Panel no longer resets when changing platform selection
  Technical:
    - Uses source_platform.starter_pack directly for quality inference